2002-09-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Restructure conversion from unicode slightly,
	to make it clearer and more readable and to include handling of
	lossy conversions.
	* Headers/gnustep/unicode/gsm0338.h: Added table for lossy conversion
	from unicode.

2002-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Bugfix ... look for source files more
	intelligently. Try both current directory and relative to header.
	* Tools/AGSOutput.m: When creating template output file for functions
	etc because none was supplied, take account of the -Up flag and
	create an up link in it.
	* Source/GSHTTPURLHandle.m: If response parsing fails, fail the
	load operation and (conditionally when debug enabled) log an error.

2002-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Basic/dummy implementations of new MacOS-X
	methods added. Attribute handling totally rewritten to work in a lazy
	way ... so we only set up attribute info in the dictionary when we
	actually need it.  Account 'Number' methods and dictionary keys changed
	to be account 'ID' instead ... in accordance with MacOS-X usage.
	Documented the class.
	* Source/NSData.m: ([-writeToFile:atomically:]) implement workaround
	for bug in windoze implementation of rename()
	* Source/NSString.m: Remove some redundant code duplicating stuff in
	GSMime.m

2002-09-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: MacOS-X ([componentsToDisplayForPath:]) and
	([displayNameAtPath:]) methods implemented.  Creation date added.
	* Source/NSString.m: More alterations to GNUstep extension methods
	to make their names consistent with other methods.
	Q. Should we deprecate/remove them entirely?
	* Tools/gsdoc.m: Update for changes to extension methods... though
	this tool has been deprecated for some time now, so perhaps we
	should remove it?

2002-09-13  Adam Fedor  <fedor@gnu.org>

	* Source/cifframe.m (cifframe_guess_struct_size): Recurse if